test/domains/compilerErrors/notsupportedStridable-assoc.chpl
use notsupportedCommon;

writeln(dfltAssociativeBase.stridable);
// also errors:
writeln(dfltAssociativeSubdomain.stridable);
//writeln(dfltAssociativeSparseSub.stridable);
