test/domains/compilerErrors/notsupportedStridable-assoc.good
notsupportedStridable-assoc.chpl:3: error: associative domains do not support .stridable
